# sdp_project_q1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: .clang-format  BasicColoringAlgorithm.cpp  CMakeLists.txt  ColoringStrategy.h  Graph.h  IOMethods.cpp  IOMethods.h  Vertex.cpp  Vertex.h  main.cpp  vertex.cpp  vertex.h
src/color_prog/: CMakeLists.txt  main.cpp
src/core/: Barrier.cpp  Barrier.h  BasicColoringAlgorithm.cpp  BasicColoringAlgorithm.h  CMakeLists.txt  ColoringStrategy.h  Graph.cpp  Graph.h  IOMethods.cpp  IOMethods.h  JonesPlassmannAlgorithm.cpp  JonesPlassmannAlgorithm.h  LargestDegreeFirstAlgorithm.cpp  LargestDegreeFirstAlgorithm.h  LubyColoringAlgorithm.cpp  LubyColoringAlgorithm.h  Vertex.cpp  Vertex.h
src/core/coloring_algorithms/: BasicColoringAlgorithm.cpp  ColoringStrategy.h  JonesPlassmannAlgorithm.cpp  JonesPlassmannAlgorithm.h  LargestDegreeFirstAlgorithm.cpp  LargestDegreeFirstAlgorithm.h  LubyColoringAlgorithm.cpp  LubyColoringAlgorithm.h
src/core/io/: ColorExporter.cpp  ColorExporter.h  IOMethods.cpp  IOMethods.h
src/tests/: CMakeLists.txt  coloring_dimacs_test.cpp  dimacs_coloring.cpp  file_dimacs_test.cpp  file_test.cpp  jones_test.cpp  largest_degree_first_test.cpp  load_graph_test.cpp  luby_test.cpp  sequential_test.cpp  simple_test.cpp  test_helpers.cpp  test_helpers.h
tests/: CMakeLists.txt  simple_test.cpp
